# apps

./: CMakeLists.txt  config.h.in  frame.cxx  frame.hxx  main.cxx  readme.txt  resource.rc.in  xp.xml
data/: Alarm.qrc  Alarm.ui  CMakeLists.txt  alarm.builder  alarm.desktop.in  alarm.desktop.in.in  alarm.qrc  alarm.ui  calaca01.desktop.in.in  calaca02.builder  calaca02_v2.builder  config.h.in  galarm2.desktop.in.in  gtk2-alarm.builder  gtk2-alarm.desktop.in.in  gtk2-percentage.builder  gtk2-percentage.desktop.in.in  gtk2-slimthemeviewer.builder  gtk2-slimthemeviewer.desktop.in.in  gtk2-youtubedl.builder  gtk2-youtubedl.desktop.in.in  gtk3-extractor.builder  gtk3-extractor.desktop.in.in  pref.ui  qt4-alarm.desktop.in.in  qt4-youtubedl.desktop.in  reguser.qrc  reguser.ui  resource.h  resource.rc.in
locales/: CMakeLists.txt  es_MX.ts
po/: CMakeLists.txt  CMakeLists_bkp.txt  es.po  es.po~
src/: CMakeLists.txt  FormUI.cpp  FormUI.hpp  alarm.cc  alarm.hh  alarm_frm.cc  alarm_frm.hh  callbacks.c  callbacks.h  config.h.in  form.cxx  form.hxx  helper.c  helper.h  helpers.c  helpers.h  main-window.c  main-window.h  main.c  main.cc  main.cpp  main.cxx  main.h  main.hh  main.hpp  mtc.cpp  notify.c  notify.cc  notify.h  notify.hh  page1.c  page1.h  page2.c  page2.h  pref.cc  pref.hh  reguser.cpp  reguser.hpp  resource.h  resource.rc.in  (+6 more)
translations/: es.ts  translations.qrc
